cabal-version:       2.4
name:                mediabus-rtp
version:             1.0.0
synopsis:            Receive and Send RTP Packets
description:         Please see README.md
homepage:            https://github.com/sheyll/mediabus-rtp
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sven Heyll
maintainer:          sven.heyll@lindenbaum.eu
copyright:           2016-2021 Sven Heyll, Lindenbaum GmbH
category:            Audio
build-type:          Simple
-- extra-source-files:

library
  hs-source-dirs:      src
  other-modules:       Data.MediaBus.Rtp.InternalLogging
  exposed-modules:     Data.MediaBus.Rtp
                     , Data.MediaBus.Rtp.Packet
                     , Data.MediaBus.Rtp.Source
                     , Data.MediaBus.Rtp.AlawSource
  default-language:    Haskell2010
  ghc-options:       -Wall -funbox-strict-fields -fno-warn-unused-do-bind  -fprint-explicit-kinds
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       QuickCheck
                     , array
                     , async
                     , base ^>= 4.14
                     , bytestring
                     , cereal
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , data-default
                     , deepseq
                     , lens
                     , mediabus ^>= 1.0
                     , monad-logger
                     , mtl
                     , network
                     , parallel
                     , primitive
                     , process
                     , random
                     , stm
                     , streaming-commons
                     , tagged
                     , text
                     , time
                     , transformers
                     , vector <13

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      specs
  main-is:             Spec.hs
  other-modules:       Data.MediaBus.Rtp.SourceSpec
  default-language:    Haskell2010

  -- HACK make cabal test work in nix-shell
  -- https://github.com/obsidiansystems/cardano-node/commit/1d500566fe628f9e603244b55c2c524965bd66ff
  -- build-tool-depends:  hspec-discover:hspec-discover
  -- END OF HACK

  build-depends:       base ^>= 4.14
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , mediabus
                     , mediabus-rtp
                     , monad-logger
                     , lens
                     , hspec
                     , bytestring
  default-extensions:  ApplicativeDo
                     , Arrows
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  ghc-options:       -Wall
                     -fno-warn-unused-binds
                     -fno-warn-orphans
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
                     -fno-warn-type-defaults

executable mediabus-demo-rtp-alaw-player
  hs-source-dirs:      mediabus-demo-rtp-alaw-player
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       QuickCheck
                     , async
                     , base ^>= 4.14
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , mediabus
                     , mediabus-rtp
                     , data-default
                     , lens
                     , monad-logger
                     , mtl
                     , parallel
                     , random
                     , stm
                     , tagged
                     , streaming-commons
                     , time
                     , unliftio
                     , vector <13
  default-extensions:  ApplicativeDo
                     , Arrows
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  ghc-options:       -Wall
                     -fno-warn-unused-binds
                     -fno-warn-orphans
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
                     -fno-warn-type-defaults
                     -rtsopts
                     -threaded

source-repository head
  type:     git
  location: https://github.com/lindenbaum/mediabus-rtp
